Fix svg alignment (#131)
* fix: svg alignment

* fix: svg alignment

* chore: linting

* fix: layout issues in RFC9043

--- a/client/app/assets/css/upstream-xml2rfc.css
+++ b/client/app/assets/css/upstream-xml2rfc.css
@@ -94,16 +94,6 @@ p {
 div {
   margin: 0;
 }
-.alignRight.art-text {
-  background-color: #f9f9f9;
-  border: 1px solid #eee;
-  border-radius: 3px;
-  padding: 1em 1em 0;
-  margin-bottom: 1.5em;
-}
-.alignRight.art-text pre {
-  padding: 0;
-}
 .alignRight {
   margin: 1em 0;
 }
@@ -143,17 +133,7 @@ svg [font-family~='monospace' i] {
   background-color: #f9f9f9;
   border: 1px solid #eee;
   border-radius: 3px;
-  padding: 1em 1em 0;
   margin-bottom: 1.5em;
-}
-.alignCenter.art-text pre {
-  padding: 0;
-}
-.alignCenter {
-  margin: 1em 0;
-}
-.alignCenter > *:first-child {
-  margin: 0 auto;
 }
 
 /* lists */
@@ -975,10 +955,14 @@ h4 {
 .alignRight.art-text {
   margin-bottom: 0;
 }
-.alignLeft,
-.alignCenter,
-.alignRight {
-  margin: 1em 0 0 0;
+.alignLeft *:first-child {
+  margin: 0 auto 0 0;
+}
+.alignCenter *:first-child {
+  margin: 0 auto 0 auto;
+}
+.alignRight *:first-child {
+  margin: 0 0 0 auto;
 }
 /* In print, the pilcrow won't show on hover, so prevent it from taking up space,
    possibly even requiring a new line */
